fix problem that makes form not centered

--- a/resources/css/accountForm.css
+++ b/resources/css/accountForm.css
@@ -1,6 +1,6 @@
 .accountForm {
-    min-width : 25rem;
-    min-height : 35rem;
+    width : 25rem;
+    height : 35rem;
     padding : 1rem;
     border-radius: 2rem;
     background-color: var(--secondary);
@@ -8,14 +8,24 @@
     animation: formAppear 250ms ease-in-out;
 
     @media screen and (max-width : 992px) {
-        min-width : 90%;
-        min-height : 40rem;
+        width : 90%;
+        height: 80%;
+        min-height : 30rem;
     }
 
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.formContainer {
+    width : 100vw;
+    height : 100vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .accountForm input, .accountForm button {
@@ -26,6 +36,14 @@
     border-radius: 2rem;
 
     font-family: 'Montserrat', sans-serif;
+}
+
+.accountForm textarea {
+    max-width : 80%;
+    width : 80%;
+    min-width : 15rem;
+    min-height : 10rem;
+    max-height : 50%;
 }
 
 .accountForm input {
