--- a/resources/css/word.css
+++ b/resources/css/word.css
@@ -84,6 +84,7 @@
     font-family: 'Inter', sans-serif;
     margin-top: 1rem;
     max-width: 50%;
+    font-size: 1.25rem;
 
     @media screen and (max-width : 992px) {
         max-width : 80%;
